--- a/SpringPracticeAssignments/Student-Course/FrontEnd/university/package.json
+++ b/SpringPracticeAssignments/Student-Course/FrontEnd/university/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.9.0",
+    "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1"
   },
@@ -13,7 +14,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy":"http://localhost:8080",
+  "proxy": "http://localhost:8080",
   "eslintConfig": {
     "extends": "react-app"
   },
