--- a/SpringPracticeAssignments/Student-Course/FrontEnd/university/package.json
+++ b/SpringPracticeAssignments/Student-Course/FrontEnd/university/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "react": "^16.9.0",
+    "react-bootstrap": "^0.32.4",
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^16.9.0",
     "react-router-config": "^5.0.1",
