--- a/SpringPracticeAssignments/Student-Course/FrontEnd/university/package.json
+++ b/SpringPracticeAssignments/Student-Course/FrontEnd/university/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/styles": "^4.4.1",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "material-ui": "^0.20.2",
