--- a/SpringPracticeAssignments/Student-Course/FrontEnd/university/package.json
+++ b/SpringPracticeAssignments/Student-Course/FrontEnd/university/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "material-ui": "^0.20.2",
+    "material-ui-password-field": "^2.1.0",
     "react": "^16.9.0",
     "react-bootstrap": "^0.32.4",
     "react-bootstrap-validation": "^0.1.11",
