--- a/SpringPracticeAssignments/Student-Course/build.gradle
+++ b/SpringPracticeAssignments/Student-Course/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	testImplementation 'com.h2database:h2'
 	compile("com.h2database:h2")
 	runtimeOnly 'mysql:mysql-connector-java'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
