--- a/SpringPracticeAssignments/Student-Course/build.gradle
+++ b/SpringPracticeAssignments/Student-Course/build.gradle
@@ -11,16 +11,20 @@ buildscript {
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
 		classpath "com.moowork.gradle:gradle-node-plugin:1.3.1"
+		classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.7"
 	}
 }
 
+apply plugin: 'org.sonarqube'
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'jacoco'
 apply plugin: 'com.moowork.node'
 group = 'com.nikhil'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
+
 
 configurations {
 	developmentOnly
@@ -41,6 +45,7 @@ dependencies {
 	compile("com.h2database:h2")
 	runtimeOnly 'mysql:mysql-connector-java'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.junit.jupiter:junit-jupiter:5.5.2'
 }
 
 task copyWebApp(type: Copy) {
@@ -72,4 +77,16 @@ node {
 
 	// Set the work directory for NPM
 	npmWorkDir = file("${project.buildDir}/npm")
+}
+jacoco {
+	toolVersion = "0.8.4"
+	reportsDir = file("$buildDir/reports/jacoco")
+}
+
+jacocoTestReport {
+	reports {
+		xml.enabled false
+		csv.enabled false
+		html.destination file("${buildDir}/jacocoHtml")
+	}
 }
